--- a/04 - Final project/report04.Rmd
+++ b/04 - Final project/report04.Rmd
@@ -439,6 +439,35 @@ plot(v_modelFitTime)
 ```
 
 
+# Considerando efeito de iteração
+```{r, echo=FALSE, message=FALSE, warning=FALSE, results='show'}
+
+v_modelAncovaTime2 = aov(log(time)~algorithm*log(size), data=v_data2)
+summary.aov(v_modelAncovaTime2)
+v_r2Model2 = summary.lm(v_modelAncovaTime2)$r.square
+
+v_modelFitTime = lm(log(time)~log(size)*algorithm, data=v_data2)
+
+plot(x = log(subset(v_data2, algorithm=='ACO')$size),
+     y = log(subset(v_data2, algorithm=='ACO')$time),
+     cex  = 1,
+     las  = 1,
+     pch  = 16,
+     col='red',
+     xlab = "log size",
+     ylab = "Time")
+points(x = log(subset(v_data2, algorithm=='ACO_Local')$size),
+       y = log(subset(v_data2, algorithm=='ACO_Local')$time),
+       cex  = 1,
+       pch  = 18,
+       col='blue')
+legend("topleft", legend=c('ACO', 'ACO+LocalSearch'), col=c("red", "blue"),  pch=c(16,18), cex=1)
+
+abline(coef=c(v_modelFitTime$coefficients[1],v_modelFitTime$coefficients[2]), col='red')
+abline(coef=c(v_modelFitTime$coefficients[1]+v_modelFitTime$coefficients[3],v_modelFitTime$coefficients[2]+v_modelFitTime$coefficients[4]), col='blue')
+```
+
+
 # Qualidade
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, results='show'}
 v_modelAncovaTime = aov((qualityRelative)~algorithm+log(size), data=v_data2)
